--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -33,9 +33,9 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
     - name: Check test coverage  #Check scope of the tests
-      run: coverage run manage.py test
-    - name: Run Tests
       run: |
-        python manage.py test
+        coverage run manage.py test
+        coverage report -m
+   
 
   
