--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -36,6 +36,25 @@ jobs:
       run: |
         coverage run manage.py test
         coverage report -m
-   
+ 
+  package-job: # package job for building and publishing docker images
+    runs-on: ubuntu-latest
+    needs: [build-and-test]     #will be fired if and only if the build-and-test job is passed.
+    if: ${{ github.event_name == 'push' }}    #will be fired if the trigger event is a push event.
+    steps:
+      - name: Checkout Code # checking out code.
+        uses: actions/checkout@v2
+      - name: Build & Publish Image #we are using a public GitHub Action to build and publish docker image to our GCR registry.
+        uses: docker/build-push-action@v1
+        env:
+          app_name: noteit
+        with:
+          username: _json_key # default for gcr.io
+       #    password: ${{ secrets.GKE_PASSWORD }} # service account file to be set as secret
+       #   registry: gcr.io # gcr registry domain
+       #   repository: ${{secrets.GKE_PROJECT}}/github-django-actions/app # GKE_PROJECT is out GCP Project id to be set as secret.
+       #   tag_with_sha: true # this will tag our image with commit id. For example our image our be gcr.io/project-id/github-django-actions/app:sha-7865423 where 7865423 is the short sha of our commit.
+
+
 
   
