docker packaging - workflow

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -44,17 +44,13 @@ jobs:
     steps:
       - name: Checkout Code # checking out code.
         uses: actions/checkout@v2
-      - name: Build & Publish Image #we are using a public GitHub Action to build and publish docker image to our GCR registry.
-        uses: docker/build-push-action@v1
-        env:
-          app_name: noteit
-        with:
-          username: _json_key # default for gcr.io
-       #    password: ${{ secrets.GKE_PASSWORD }} # service account file to be set as secret
-       #   registry: gcr.io # gcr registry domain
-       #   repository: ${{secrets.GKE_PROJECT}}/github-django-actions/app # GKE_PROJECT is out GCP Project id to be set as secret.
-       #   tag_with_sha: true # this will tag our image with commit id. For example our image our be gcr.io/project-id/github-django-actions/app:sha-7865423 where 7865423 is the short sha of our commit.
-
-
+      - name: Package & Publish Image #we are using a public GitHub Action to build and publish docker image to our GCR registry.
+        run: |
+          docker build -t app
+          docker login -u mainakimani -p dckr_pat_FYH29Rd5BQl-idqRw0vnWVBwEsY
+          docker tag app mainakimani/noteit
+          docker push mainakimani/noteit
+          
+        
 
   
