--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -46,7 +46,7 @@ jobs:
         uses: actions/checkout@v2
       - name: Package & Publish Image #we are using a public GitHub Action to build and publish docker image to our GCR registry.
         run: |
-          docker build -t app
+          docker build -t app .
           docker login -u mainakimani -p dckr_pat_FYH29Rd5BQl-idqRw0vnWVBwEsY
           docker tag app mainakimani/noteit
           docker push mainakimani/noteit
