--- a/prometheus.yml
+++ b/prometheus.yml
@@ -5,7 +5,7 @@ rule_files:
  # — “first.rules”
  # — “second.rules”
 scrape_configs:
-  - job_name: monitoring
-    static_configs:
+  - job_name: noteit
+    static_configs: 10s
       - targets:
-      - host.docker.internal
+      - localhost: 8000
