--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -60,19 +60,21 @@ jobs:
       uses: actions/checkout@v3
 
     - name: 📂 Deploy to staging
+    needs: [package]
       if: github.ref == 'refs/heads/development'
       uses: SamKirkland/FTP-Deploy-Action@4.3.3
       with:
         server: ftp.mainakimani.com
-        username: FtpUserName
-        password: ${{ secrets.ftp_password }}
+        username: ${{ secrets.FTPUSERNAME }}
+        password: ${{ secrets.FTPPASSWORD }}
         server-dir: /staging/
     
     - name: 📂 Deploy to production
+      needs: [package]
       if: github.ref == 'refs/heads/master'
       uses: SamKirkland/FTP-Deploy-Action@4.3.3
       with:
         server: ftp.mainakimani.com
-        username: FtpUserName
-        password: ${{ secrets.ftp_password }}
+        username: ${{ secrets.FTPUSERNAME }}
+        password: ${{ secrets.FTPPASSWORD }}
         server-dir: /deploy/
